# zmq-learn

./: README.md  requirements.in
ex1/: rep.py  req.py  req2.py
ex2/: CMakeLists.txt  build.sh  config.yaml  pub.py  run_multiple_sub.sh  sub.cpp
pubsub/: CMakeLists.txt  pub.py  sub.cpp
reqrep/: req2.py
